fixing small bug that overflows long text

--- a/client/src/pages/PlaceDetails/components/Comments/Comments.module.css
+++ b/client/src/pages/PlaceDetails/components/Comments/Comments.module.css
@@ -21,18 +21,33 @@
 
 .comment {
     position: relative;
-    align-items: center;
     padding-top: 2rem;
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 1rem;
 }
 
-.commentTitle {
-    margin-bottom: 0.5rem;
+.comment .content {
+    max-width: 70ch;
+    display: flex;
+    flex: 1;
+    gap: 0.3rem;
+    flex-direction: column;
+    align-items: center;
 }
 
-.commentContent {
+.comment .contentBody {
+    width: 100%;
+}
+
+
+.comment .commentTitle {
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
+
+.comment .commentContent {
     font-size: 1rem;
     word-wrap: break-word;
     overflow: hidden;
@@ -71,15 +86,6 @@
     height: 72px;
     border-radius: 50%;
     margin: 0 auto 0.75rem auto;
-}
-
-.content {
-    max-width: 70ch;
-    display: flex;
-    flex: 1;
-    gap: 0.3rem;
-    flex-direction: column;
-    align-items: center;
 }
 
 .treeDotsDropdown {
